src/objects/testInCountry1__InCountryAuth__mdt.object
<CustomObject>
    <fields>
        <fullName>testInCountry1__Access_Token_URL__c</fullName>
        <label>Access Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Audience__c</fullName>
        <label>Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Auth_Provider_Name__c</fullName>
        <label>Auth Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Callback_URL__c</fullName>
        <label>Callback URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>InCountry Auth</label>
    <pluralLabel>InCountry Auth</pluralLabel>
</CustomObject>